# storkive

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt  setup.py  traefik.toml
settings/: .gitignore  __init__.py  common.py  dev.py  prod.py
stories/: admin.py  context_processors.py  expressions.py  forms.py  jinja2.py  models.py  urls.py  util.py  views.py
stories/jinja2/: _nav-site.html  _snippet-list-script.html  _snippet-story-link.html  _tmpl-standard.html  author.html  list.html  lists.html  tag.html  whats-new.html
stories/migrations/: 0001_initial.py
stories/static/: base.css  base.js
stories/templates/: _nav-arrows.html  _nav-author.html  _nav-site.html  _nav-story.html  _snippet-story-by.html  _snippet-story-link.html  _tmpl-base.html  _tmpl-standard.html  author.html  authors.html  index.html  installment.html  letter.html  tag.html  tags.html  title.html  titles.html  whats-new.html
stories/templatetags/: stories_extras.py
storkive/: __version__.py  settings.py  urls.py  wsgi.py
